<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/rv_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_action_to_do"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/my_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/adult_content"
        android:textSize="25sp"
        android:layout_marginStart="60dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/welcome_to_the_app"
        android:textSize="25sp"
        android:layout_marginStart="60dp"/>

</FrameLayout>