<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomActivity">

    <ImageView
        android:id="@+id/cutiecat"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:src="@drawable/cat3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.47" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/you_can_generate_a_number"
        app:layout_constraintTop_toBottomOf="@id/cutiecat"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/guide"/>

    <TextView
        android:id="@+id/num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="@id/guide2"/>

    <Button
        android:id="@+id/generate"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/generate_number"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/num"/>


</androidx.constraintlayout.widget.ConstraintLayout>